--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,6 +26,7 @@ pycparser==2.22
 pyinstaller==6.13.0
 pyinstaller-hooks-contrib==2025.4
 pyOpenSSL==25.0.0
+python-dotenv==1.1.0
 pywin32-ctypes==0.2.3
 redis==6.0.0
 requests==2.32.3
